[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
rayon = "1.5.0"
paste = "1.0.3"
serde_scan = "0.4.1"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false